--- a/guia-hoteles/package.json
+++ b/guia-hoteles/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "primer proyecto Nodejs",
   "main": "index.html",
-  "scripts": {	
-	"dev": "lite-server",	
+  "scripts": {
+    "dev": "lite-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -17,7 +17,11 @@
     "url": "https://github.com/mbelenbaires/Curso-Bootstrap/issues"
   },
   "homepage": "https://github.com/mbelenbaires/Curso-Bootstrap#readme",
-  "dependencies": {},
+  "dependencies": {
+    "bootstrap": "^4.5.2",
+    "jquery": "^3.5.1",
+    "popper.js": "^1.16.1"
+  },
   "devDependencies": {
     "lite-server": "^2.5.4"
   }
